force-app/main/default/objects/Plot__c/fields/Basic_Cost1__c.field-meta.xml
<CustomField>
    <fullName>Basic_Cost1__c</fullName>
    <formula>IF( ISBLANK(Built_up_area__c), Plot_Land_Area__c * Rate_per_sqft__c, Built_up_area__c * (Rate_per_sqft__c + PLC__c + Floor_Rise__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>