force-app/main/default/objects/Plot__c/fields/Block1__c.field-meta.xml
<CustomField>
    <fullName>Block1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Block</label>
    <referenceTo>Block__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>