force-app/main/default/objects/Plot__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <label>Block Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>A6</fullName>
            </value>
            <value>
                <fullName>A7</fullName>
            </value>
            <value>
                <fullName>A8</fullName>
            </value>
            <value>
                <fullName>A9</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
            <value>
                <fullName>B5</fullName>
            </value>
            <value>
                <fullName>B6</fullName>
            </value>
            <value>
                <fullName>B7</fullName>
            </value>
            <value>
                <fullName>B8</fullName>
            </value>
            <value>
                <fullName>B9</fullName>
            </value>
            <value>
                <fullName>B10</fullName>
            </value>
            <value>
                <fullName>B11</fullName>
            </value>
            <value>
                <fullName>B13</fullName>
            </value>
            <value>
                <fullName>B17</fullName>
            </value>
            <value>
                <fullName>B18</fullName>
            </value>
            <value>
                <fullName>B19</fullName>
            </value>
            <value>
                <fullName>B20</fullName>
            </value>
            <value>
                <fullName>B21</fullName>
            </value>
            <value>
                <fullName>B23</fullName>
            </value>
            <value>
                <fullName>B27</fullName>
            </value>
            <value>
                <fullName>B28</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>C8</fullName>
            </value>
            <value>
                <fullName>C9</fullName>
            </value>
            <value>
                <fullName>C10</fullName>
            </value>
            <value>
                <fullName>C12</fullName>
            </value>
            <value>
                <fullName>C13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>