force-app/main/default/objects/Plot__c/fields/Booked__c.field-meta.xml
<CustomField>
    <fullName>Booked__c</fullName>
    <formula>ISPickval(Status__c,&apos;Booked&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booked</label>
    <type>Checkbox</type>
</CustomField>