force-app/main/default/objects/Plot__c/fields/Booking_AmountFor__c.field-meta.xml
<CustomField>
    <fullName>Booking_AmountFor__c</fullName>
    <formula>Project__r.Booking_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>