force-app/main/default/objects/Plot__c/fields/Booking_Rate_Per_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Booking_Rate_Per_Sqft__c</fullName>
    <formula>If(Booking__c == null,Rate_per_sqft__c,Booking__r.Rate_per_sqft__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Rate Per Sqft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>