force-app/main/default/objects/Plot__c/fields/Booking_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Booking_Received_Amount__c</fullName>
    <formula>Booking__r.Total_received_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Received Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>