force-app/main/default/objects/Plot__c/fields/Booking_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Booking_Total_Price__c</fullName>
    <formula>If(Booking__c == null,Total_Cost_Ex_Leg_Main__c,  Booking__r.Total_Cost_Ex_Leg_Main__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Total Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>