force-app/main/default/objects/Plot__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>Building</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building 1</fullName>
            </value>
            <value>
                <fullName>Building 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>