force-app/main/default/objects/Plot__c/fields/Car_Parking_ChargesFor__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking_ChargesFor__c</fullName>
    <formula>Project__r.Car_Parking_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Car Parking Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>