force-app/main/default/objects/Plot__c/fields/Closed_Car_Parking__c.field-meta.xml
<CustomField>
    <fullName>Closed_Car_Parking__c</fullName>
    <label>Closed Car Parking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>