force-app/main/default/objects/Plot__c/fields/Club_Amenities_ChargesFor__c.field-meta.xml
<CustomField>
    <fullName>Club_Amenities_ChargesFor__c</fullName>
    <formula>Project__r.Club_Amenities_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Club &amp; Amenities Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>