force-app/main/default/objects/Plot__c/fields/Construction_Cost__c.field-meta.xml
<CustomField>
    <fullName>Construction_Cost__c</fullName>
    <formula>Total_Cost__c -  Land_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Construction Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>