force-app/main/default/objects/Plot__c/fields/Extented_Balcony_area__c.field-meta.xml
<CustomField>
    <fullName>Extented_Balcony_area__c</fullName>
    <label>Extented Balcony area</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>