force-app/main/default/objects/Plot__c/fields/Flat_Type__c.field-meta.xml
<CustomField>
    <fullName>Flat_Type__c</fullName>
    <label>Flat Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Type 1</fullName>
            </value>
            <value>
                <fullName>Type 1A</fullName>
            </value>
            <value>
                <fullName>Type 2</fullName>
            </value>
            <value>
                <fullName>Type 2A</fullName>
            </value>
            <value>
                <fullName>Type 3</fullName>
            </value>
            <value>
                <fullName>Type 3A</fullName>
            </value>
            <value>
                <fullName>Type 4</fullName>
            </value>
            <value>
                <fullName>Type 4A</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Type 5</fullName>
            </value>
            <value>
                <fullName>Type 6</fullName>
            </value>
            <value>
                <fullName>Type 7</fullName>
            </value>
            <value>
                <fullName>Type 8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>