force-app/main/default/objects/Plot__c/fields/Floor_Rise__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rise__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Floor Rise Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>