force-app/main/default/objects/Plot__c/fields/Generator_STPFor__c.field-meta.xml
<CustomField>
    <fullName>Generator_STPFor__c</fullName>
    <formula>Project__r.Generator_STP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generator/STP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>