force-app/main/default/objects/Plot__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <formula>/*(Basic_Cost_with_CP__c +Infrastructure_Charges_per_sqft__c+Legal_Documentation_Charges__c+ Clubhouse_Charges__c + TNEB__c+Floor_Rise__c
	+ Piped_Gas__c+ Interior_Charges__c )* 0.05*/
	 Total_Cost__c *  GST1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>