force-app/main/default/objects/Plot__c/fields/Is_Sold__c.field-meta.xml
<CustomField>
    <fullName>Is_Sold__c</fullName>
    <formula>ISPICKVAL(Status__c,&apos;Booked&apos;)</formula>
    <label>Is Sold</label>
    <type>Checkbox</type>
</CustomField>