force-app/main/default/objects/Plot__c/fields/Labour_Cess__c.field-meta.xml
<CustomField>
    <fullName>Labour_Cess__c</fullName>
    <formula>IF(ISPICKVAL(Property_Type__c, &apos;Apartment&apos;), Total_Cost__c * Project__r.Labour_Cess__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labour Cess</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>