force-app/main/default/objects/Plot__c/fields/LAN_WC__c.field-meta.xml
<CustomField>
    <fullName>LAN_WC__c</fullName>
    <formula>Water_and_Electricity_Charges__c *  Built_up_area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LAN WC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>