force-app/main/default/objects/Plot__c/fields/Land_Cost__c.field-meta.xml
<CustomField>
    <fullName>Land_Cost__c</fullName>
    <formula>Land_Rate_per_sqft__c * Plot_Land_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Land Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>