force-app/main/default/objects/Plot__c/fields/Land_Rate_per_sqft__c.field-meta.xml
<CustomField>
    <fullName>Land_Rate_per_sqft__c</fullName>
    <label>Land Rate per sqft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>