force-app/main/default/objects/Plot__c/fields/Open_Car_Parking__c.field-meta.xml
<CustomField>
    <fullName>Open_Car_Parking__c</fullName>
    <label>Open Car Parking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>