force-app/main/default/objects/Plot__c/fields/PLC_Charges__c.field-meta.xml
<CustomField>
    <fullName>PLC_Charges__c</fullName>
    <formula>PLC__c *  Rate_per_sqft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLC Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>