force-app/main/default/objects/Plot__c/fields/Regular_Premium__c.field-meta.xml
<CustomField>
    <fullName>Regular_Premium__c</fullName>
    <label>Regular/Premium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Super Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>