force-app/main/default/objects/Plot__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>to capture the availability of the plot</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Guest Acc</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>NOT RELEASE FOR SALE</fullName>
                <isActive>false</isActive>
                <label>Not Release For Sale</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>