force-app/main/default/objects/Plot__c/fields/Super_built_up_area__c.field-meta.xml
<CustomField>
    <fullName>Super_built_up_area__c</fullName>
    <label>Super built up area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>