force-app/main/default/objects/Plot__c/fields/Total_Basic_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Basic_Cost__c</fullName>
    <formula>Basic_Cost1__c + Premium_Location_Charge_10__c+ Other_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Basic Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>