force-app/main/default/objects/Plot__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>IF(OR(ISPICKVAL(Project__r.Project__c,&apos;The Landmark&apos;),ISPICKVAL(Project__r.Project__c,&apos;Florenzza&apos;)),Basic_Cost1__c + PLC_Charges__c + Car_Scooter_Parking__c + Club_Amenities_Charges__c + Water_Electricity_Charges__c + Generator_STP__c + Floor_Rise__c,Basic_Cost1__c  + Car_Scooter_Parking__c + Club_Amenities_Charges__c + IF(Water_and_Electricity_Charges__c != null,(Water_and_Electricity_Charges__c * Rate_per_sqft__c),Water_Electricity_Charges__c ) + Generator_STP__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>