force-app/main/default/objects/Plot__c/fields/Total_Cost_Ex_Leg_Main__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Ex_Leg_Main__c</fullName>
    <formula>Total_Cost__c  +  GST__c + Labour_Cess__c+ Other_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost (Ex. Leg. &amp; Main.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>