force-app/main/default/objects/Plot__c/fields/Total_Without_Booking__c.field-meta.xml
<CustomField>
    <fullName>Total_Without_Booking__c</fullName>
    <formula>Total_Cost_Ex_Leg_Main__c -  Booking_AmountFor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Without Booking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>