force-app/main/default/objects/Plot__c/fields/Tower1__c.field-meta.xml
<CustomField>
    <fullName>Tower1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Block__c</referenceTo>
    <relationshipLabel>Units (Tower)</relationshipLabel>
    <relationshipName>Units1</relationshipName>
    <type>Lookup</type>
</CustomField>