force-app/main/default/objects/Plot__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <label>Tower Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tower-1</fullName>
            </value>
            <value>
                <fullName>Tower-2</fullName>
            </value>
            <value>
                <fullName>Tower-3</fullName>
            </value>
            <value>
                <fullName>Tower-4</fullName>
            </value>
            <value>
                <fullName>Tower-5</fullName>
            </value>
            <value>
                <fullName>Tower-6</fullName>
            </value>
            <value>
                <fullName>Tower-7</fullName>
            </value>
            <value>
                <fullName>Tower-8</fullName>
            </value>
            <value>
                <fullName>Tower-9</fullName>
            </value>
            <value>
                <fullName>Tower-10</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>T - Block</fullName>
            </value>
            <value>
                <fullName>Tower-11</fullName>
            </value>
            <value>
                <fullName>Tower-12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>