force-app/main/default/objects/Plot__c/fields/UDS__c.field-meta.xml
<CustomField>
    <fullName>UDS__c</fullName>
    <label>UDS</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>