force-app/main/default/objects/Plot__c/fields/Water_and_Electricity_Charges__c.field-meta.xml
<CustomField>
    <fullName>Water_and_Electricity_Charges__c</fullName>
    <label>Water and Electricity Charges / sq ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>