force-app/main/default/objects/Plot__c/fields/Water_Electricity_ChargesFor__c.field-meta.xml
<CustomField>
    <fullName>Water_Electricity_ChargesFor__c</fullName>
    <formula>Project__r.Water_Electricity_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Water &amp; Electricity Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>