force-app/main/default/objects/Plot__c/validationRules/ConstructionCostLandCost.validationRule-meta.xml
<ValidationRule>
    <fullName>ConstructionCostLandCost</fullName>
    <active>false</active>
    <errorConditionFormula>If(!ISPICKVAL(Property_Type__c, &apos;	Apartment&apos;), AND(ISBLANK(Construction_Cost__c),ISBLANK(Land_Cost__c)),false)</errorConditionFormula>
    <errorMessage>Please Fill Construction Cost And Land Cost</errorMessage>
</ValidationRule>