force-app/main/default/objects/Plot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Built_up_area__c</columns>
    <columns>Status__c</columns>
    <columns>Unit_Facing_Direction__c</columns>
    <columns>BHK_Type__c</columns>
    <columns>Project__c</columns>
    <columns>Total_Cost_Ex_Leg_Main__c</columns>
    <columns>PLC__c</columns>
    <columns>Floor_Rise__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>